@@ -49,6 +49,7 @@ command_array_struct Commands[] = {
     { "empty", command_empty,            1.0 },
     { "examine", command_examine,        0.5 },
     { "fix_me", command_fix_me,          0.0 },
+    { "forget_spell", command_forget_spell, 0.0 },
     { "get", command_take,               1.0 },
     { "help", command_help,              0.0 },
     { "hiscore", command_hiscore,        0.0 },
@@ -216,7 +217,6 @@ command_array_struct WizCommands [] = {
     { "dumpallobjects", command_dumpallobjects,  0.0 },
     { "dumpmap", command_dumpmap,                0.0 },
     { "follow", command_follow,                  0.0 },
-    { "forget_spell", command_forget_spell,      0.0 },
     { "free", command_free,                      0.0 },
     { "freeze", command_freeze,                  0.0 },
     { "goto", command_goto,                      0.0 },
